--- a/styles/style.css
+++ b/styles/style.css
@@ -45,14 +45,23 @@ div#recipe-voter { float: left; margin-right: 1em; background-color: #009B95; bo
 button#recipe-up-vote, button#recipe-down-vote, span#recipe-total { display: block; text-align: center; }
 section#recipe-body { width: 100%; }
 button#recipe-up-vote, button#recipe-down-vote { border: 0; background: none; cursor: pointer; }
+button#recipe-up-vote:hover, button#recipe-up-vote:active, button#recipe-up-vote:focus { color: #A1F0EE; }
+button#recipe-down-vote:hover, button#recipe-down-vote:active, button#recipe-down-vote:focus { color: #FF3500; }
 .voted-up { color: #A1F0EE; }
 .voted-down { color: #FF3500; }
 div#recipe-comments h2 { margin: 1em 0 0 0; }
 li.recipe-comment { margin: 1.75em 0.25em 0 0; }
 li.recipe-comment:first-child { margin-top: 0.5em; }
 li.recipe-comment header { background: #009B95; color: #FEFAFD; font-weight: bold; padding: 0.5em; margin: 0 0 0.5em 0;}
+li.recipe-comment header a { color: #FEFAFD; }
+li.recipe-comment header a:hover, li.recipe-comment header a:active, li.recipe-comment header a:focus { color: #A1F0EE; }
 li.recipe-comment header time { color: #A1F0EE; font-weight: normal; float: right; }
 section#recipe-new-comment h2 { margin: 2em 0 0.25em 0; }
 div#recipe-new-comment-info { background: #009B95; color: #FEFAFD; display: block; margin: 0; padding: 0.25em 0.75em; }
 div#recipe-new-comment-info a { color: #A1F0EE; }
 div#recipe-new-comment-info a:hover, div#recipe-new-comment-info a:active, div#recipe-new-comment-info a:focus { text-decoration: underline; }
+section#recipe-tags { margin: 1em 0 1em 0; }
+section#recipe-tags h2 { font-size: 1.25em; color: #006561; font-weight: bold; display: inline; margin: 0 0.25em 0 0; }
+section#recipe-tags ul, section#recipe-tags ul li { display: inline; }
+section#recipe-tags ul li a { background-color: #009B95; border: 0.125em solid #006561; color: #FEFAFD; padding: 0.125em; }
+section#recipe-tags ul li a:hover, section#recipe-tags ul li a:active, section#recipe-tags ul li a:focus { color: #A1F0EE; }
