--- a/styles/style.css
+++ b/styles/style.css
@@ -70,3 +70,9 @@ section#recipe-tags ul, section#recipe-tags ul li { display: inline; }
 section#recipe-tags ul li a { background-color: #009B95; border: 0.125em solid #006561; color: #FEFAFD; padding: 0.125em; }
 section#recipe-tags ul li a:hover, section#recipe-tags ul li a:active, section#recipe-tags ul li a:focus { color: #A1F0EE; }
 img#recipe-img { width: 25em; height: auto; float: right; border: 0.125em solid #006561; margin-left: 0.25em;}
+
+/* Ingredients
+*********************************************************/
+section#ingredient-body { width: 100%; float: left; }
+img#ingredient-img { width: 25em; height: auto; float: right; border: 0.125em solid #006561; margin-left: 0.25em;}
+ul#ingredient-recipes { width: 100%; }
