--- a/styles/style.css
+++ b/styles/style.css
@@ -24,6 +24,7 @@ textarea { font-family: 'Bitter', sans-serif; border: 0.125em solid #009B95; wid
 em { font-style:italic; }
 strong { font-weight: bold; }
 hr { border: none; height: 0.125em; background: #006561; }
+h2 a:hover, h2 a:focus, h2 a:active, a:hover h2, a:active h2, a:focus h2 { color: #006561; }
 
 /* Template Specific
 *********************************************************/
@@ -70,6 +71,13 @@ section#recipe-tags ul, section#recipe-tags ul li { display: inline; }
 section#recipe-tags ul li a { background-color: #009B95; border: 0.125em solid #006561; color: #FEFAFD; padding: 0.125em; }
 section#recipe-tags ul li a:hover, section#recipe-tags ul li a:active, section#recipe-tags ul li a:focus { color: #A1F0EE; }
 img#recipe-img { width: 25em; height: auto; float: right; border: 0.125em solid #006561; margin-left: 0.25em;}
+
+section.recipe-short { width: 100%; float: left; margin: 0.5em 0;}
+section.recipe-short a { width: 90%; float: left; }
+section.recipe-short a img { height: 3.75em; width: auto; float: left; border: 0.125em solid #006561; }
+section.recipe-short a div { float: left; padding-left: 0.75em; }
+section.recipe-short a div h2 { float: left; margin-bottom: 0.25em; }
+section.recipe-short a div span { float: left; clear: left;}
 
 /* Ingredients
 *********************************************************/
