--- a/styles/style.css
+++ b/styles/style.css
@@ -84,4 +84,6 @@ section.recipe-short a div span { float: left; clear: left;}
 section#ingredient-body { width: 100%; float: left; }
 img#ingredient-img { width: 25em; height: auto; float: right; border: 0.125em solid #006561; margin-left: 0.25em;}
 ul#ingredient-recipes { width: 100%; }
-div.ingredient-cloud { background: url(Cooking_secrets.jpg) no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; }
+.tooltip { display:none; background: #006561; font-size: 1.5em;  padding: 1em; color: #FEFAFD;}
+a.ingredient-cloud-item { border: 0.125em solid #009B95; margin: 0.25em; }
+a.ingredient-cloud-item:hover, a.ingredient-cloud-item:focus, a.ingredient-cloud-item:active { border: 0.375em solid #006561; margin: 0; z-index: 77777; }
