--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,6 @@
 *********************************************************/
 @import url(http://fonts.googleapis.com/css?family=Bitter|Felipa);
 
-
 .color { background-color: #009B95 }
 .color-darkoff { background-color: #1D7471 }
 .color-dark { background-color: #006561 }
@@ -88,8 +87,8 @@ ul#ingredient-recipes { width: 100%; }
 .tooltip { display:none; background: #006561; font-size: 1.5em;  padding: 1em; color: #FEFAFD;}
 a.ingredient-cloud-item { border: 0.125em solid #009B95; margin: 0.25em; }
 a.ingredient-cloud-item:hover, a.ingredient-cloud-item:focus, a.ingredient-cloud-item:active { border: 0.375em solid #006561; margin: 0; z-index: 77777; }
-div#suggested-ingredients { float: right; width: 27em; margin-left: 1em }
-section#guessed-ingredients { border-left: 0.125em solid #1D7471; }
-section#guessed-ingredients ul li { list-style-type: none; font-size: 1.33em; margin: 0.5em 0 0.5em 1em; }
-form#ingredients-add { float: left; width: 27em; }
-div#ingredients-add-wrapper { float: left; }
+div#suggested-ingredients, div#suggested-tags { float: right; width: 27em; margin-left: 1em }
+section#guessed-ingredients, section#guessed-tags { border-left: 0.125em solid #1D7471; }
+section#guessed-ingredients ul li, section#guessed-tags ul li { list-style-type: none; font-size: 1.33em; margin: 0.5em 0 0.5em 1em; }
+form#ingredients-add, form#tags-add { float: left; width: 27em; }
+div#ingredients-add-wrapper, div#tags-add-wrapper { float: left; }
