--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,7 @@ html { background: url(Cooking_secrets.jpg) no-repeat center center fixed; -webk
 body { overflow-y: scroll; font-family: 'Bitter', sans-serif; }
 h1 { font-family: 'Felipa', cursive; font-size: 2.5em; color: #009B95; margin-bottom: 0.25em; }
 input { border: 0.125em solid #009B95; background: #FEFAFD; padding: 0.125em; display: block; }
+input[type="text"], input[type="password"] { width: 12em; }
 button, input[type="submit"] { background-color: #009B95; border: 0.125em solid #006561; color: #FEFAFD; padding: 0.125em; background: url(green-marble.png); }
 h2 { font-size: 1.75em; font-family: 'Felipa', cursive; color: #009B95; }
 a { color: #009B95; }
@@ -95,6 +96,16 @@ section.recipe-short a div { float: left; padding-left: 0.75em; }
 section.recipe-short a div h2 { float: left; margin-bottom: 0.25em; }
 section.recipe-short a div span { float: left; clear: left;}
 
+/* Add */
+input#ingredient-input { display: inline; }
+label#ingredient-amount-label { display: inline; margin: 0 0 0 1em; }
+input#ingredient-amount { width: 4em; display: inline; }
+div#suggested-ingredient { width: 100%; display: block; float: left; clear: both; }
+div#suggested-tags ul, div#suggested-ingredient ul { background-color: #FEFAFD; border: 0.125em solid #006561; width: 12em; float: left; border-top: none; clear: both; }
+div#suggested-tags ul li:hover, div#suggested-ingredient ul li:hover { background: #009B95; color: #FEFAFD; cursor: pointer; }
+span.remove-tag-button, span.remove-ingredient-button { background: #009B95; border: 0.125em solid #006561; color: #FEFAFD; padding: 0 0.25em; margin: 0 0 0 0.25em; }
+span.remove-tag-button:hover, span.remove-ingredient-button:hover { cursor: pointer; }
+
 /* Ingredients
 *********************************************************/
 section#ingredient-body { width: 100%; float: left; }
@@ -103,11 +114,11 @@ ul#ingredient-recipes { width: 100%; }
 .tooltip { display:none; background: #006561; font-size: 1.5em;  padding: 1em; color: #FEFAFD;}
 a.ingredient-cloud-item { border: 0.125em solid #009B95; margin: 0.25em; }
 a.ingredient-cloud-item:hover, a.ingredient-cloud-item:focus, a.ingredient-cloud-item:active { border: 0.375em solid #006561; margin: 0; z-index: 77777; }
-div#suggested-ingredients, div#suggested-tags { float: right; width: 27em; margin-left: 1em }
-section#guessed-ingredients, section#guessed-tags { border-left: 0.125em solid #1D7471; }
-section#guessed-ingredients ul li, section#guessed-tags ul li { list-style-type: none; font-size: 1.33em; margin: 0.5em 0 0.5em 1em; }
-form#ingredients-add, form#tags-add { float: left; width: 27em; }
-div#ingredients-add-wrapper, div#tags-add-wrapper { float: left; }
+div#suggested-ingredients, div#suggested-tags, div#suggested-recipes { float: right; width: 27em; margin-left: 1em }
+section#guessed-ingredients, section#guessed-tags, section#guessed-recipes { border-left: 0.125em solid #1D7471; }
+section#guessed-ingredients ul li, section#guessed-tags ul li, section#guessed-recipes ul li { list-style-type: none; font-size: 1.33em; margin: 0.5em 0 0.5em 1em; }
+form#ingredients-add, form#tags-add, form#recipes-add { float: left; width: 27em; }
+div#ingredients-add-wrapper, div#tags-add-wrapper, div#recipes-add-wrapper { float: left; }
 
 /* Users
 *********************************************************/
