--- a/styles/style.css
+++ b/styles/style.css
@@ -49,6 +49,10 @@ div#template-main { background: url(soft-white-background.jpg); padding: 0.5em 1
 
 div.alert-box { background: #FF3500; color: #FEFAFD; font-weight: bold; width: 100%; padding: 0.25em 0; margin-bottom: 1em; }
 
+/* Reverse Search
+*********************************************************/
+
+
 /* Recipe
 *********************************************************/
 div#recipe-top { min-height: 4em; }
@@ -114,11 +118,11 @@ ul#ingredient-recipes { width: 100%; }
 .tooltip { display:none; background: #006561; font-size: 1.5em;  padding: 1em; color: #FEFAFD;}
 a.ingredient-cloud-item { border: 0.125em solid #009B95; margin: 0.25em; }
 a.ingredient-cloud-item:hover, a.ingredient-cloud-item:focus, a.ingredient-cloud-item:active { border: 0.375em solid #006561; margin: 0; z-index: 77777; }
-div#suggested-ingredients, div#suggested-tags, div#suggested-recipes { float: right; width: 27em; margin-left: 1em }
-section#guessed-ingredients, section#guessed-tags, section#guessed-recipes { border-left: 0.125em solid #1D7471; }
+div#suggested-ingredients, div#suggested-tags, div#suggested-recipes, div#suggested-reverse { float: right; width: 27em; margin-left: 1em }
+section#guessed-ingredients, section#guessed-tags, section#guessed-recipes, section#guessed-reverse  { border-left: 0.125em solid #1D7471; }
 section#guessed-ingredients ul li, section#guessed-tags ul li, section#guessed-recipes ul li { list-style-type: none; font-size: 1.33em; margin: 0.5em 0 0.5em 1em; }
-form#ingredients-add, form#tags-add, form#recipes-add { float: left; width: 27em; }
-div#ingredients-add-wrapper, div#tags-add-wrapper, div#recipes-add-wrapper { float: left; }
+form#ingredients-add, form#tags-add, form#recipes-add, section#reverse-search { float: left; width: 27em; }
+div#ingredients-add-wrapper, div#tags-add-wrapper, div#recipes-add-wrapper, div#reverse-wrapper { float: left; }
 
 /* Users
 *********************************************************/
